; ModuleID = '/home/carl/AnghaBench/linux/drivers/phy/qualcomm/extr_phy-qcom-pcie2.c_qcom_pcie2_phy_power_off.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/phy/qualcomm/extr_phy-qcom-pcie2.c_qcom_pcie2_phy_power_off.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.phy = type { i32 }
%struct.qcom_phy = type { i32, i32, i64 }

@PCIE2_PHY_RESET_CTRL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.phy*)* @qcom_pcie2_phy_power_off to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qcom_pcie2_phy_power_off(%struct.phy* %0) #0 {
  %2 = alloca %struct.phy*, align 8
  %3 = alloca %struct.qcom_phy*, align 8
  %4 = alloca i32, align 4
  store %struct.phy* %0, %struct.phy** %2, align 8
  %5 = load %struct.phy*, %struct.phy** %2, align 8
  %6 = call %struct.qcom_phy* @phy_get_drvdata(%struct.phy* %5)
  store %struct.qcom_phy* %6, %struct.qcom_phy** %3, align 8
  %7 = load %struct.qcom_phy*, %struct.qcom_phy** %3, align 8
  %8 = getelementptr inbounds %struct.qcom_phy, %struct.qcom_phy* %7, i32 0, i32 2
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @PCIE2_PHY_RESET_CTRL, align 8
  %11 = add nsw i64 %9, %10
  %12 = call i32 @readl(i64 %11)
  store i32 %12, i32* %4, align 4
  %13 = call i32 @BIT(i32 0)
  %14 = load i32, i32* %4, align 4
  %15 = or i32 %14, %13
  store i32 %15, i32* %4, align 4
  %16 = load i32, i32* %4, align 4
  %17 = load %struct.qcom_phy*, %struct.qcom_phy** %3, align 8
  %18 = getelementptr inbounds %struct.qcom_phy, %struct.qcom_phy* %17, i32 0, i32 2
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* @PCIE2_PHY_RESET_CTRL, align 8
  %21 = add nsw i64 %19, %20
  %22 = call i32 @writel(i32 %16, i64 %21)
  %23 = load %struct.qcom_phy*, %struct.qcom_phy** %3, align 8
  %24 = getelementptr inbounds %struct.qcom_phy, %struct.qcom_phy* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @clk_disable_unprepare(i32 %25)
  %27 = load %struct.qcom_phy*, %struct.qcom_phy** %3, align 8
  %28 = getelementptr inbounds %struct.qcom_phy, %struct.qcom_phy* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  %30 = call i32 @reset_control_assert(i32 %29)
  ret i32 0
}

declare dso_local %struct.qcom_phy* @phy_get_drvdata(%struct.phy*) #1

declare dso_local i32 @readl(i64) #1

declare dso_local i32 @BIT(i32) #1

declare dso_local i32 @writel(i32, i64) #1

declare dso_local i32 @clk_disable_unprepare(i32) #1

declare dso_local i32 @reset_control_assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
